--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -52,7 +52,7 @@
 
 body {
   font-family: var(--font);
-  font-size: var(--base-size);
+  font-size: 14px;
   line-height: 1.5;
   background-color: var(--primary-bg);
   color: var(--text-color);
@@ -62,6 +62,7 @@ body {
 
 .container {
   display: flex;
+  position: relative;
   grid-template-columns: var(--sidebar-width) 1fr;
   overflow: hidden;
   align-items: center;
@@ -151,47 +152,57 @@ body {
   flex: 1;
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: calc(100vh - 80px);
+  top: 0;
   max-width: var(--chat-max-width);
-  padding: 1rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-bottom: 0;
   position: fixed;
   width: 100%;
   margin-left: 50vh;
   overflow-y: auto;
+  scrollbar-color: transparent transparent;
 }
 
 .message-display {
+  display: flex;
+  flex-direction: column;
   flex: 1;
+  gap: 1;
   overflow-y: auto;
-  padding: 1rem;
-  margin-bottom: 10vh;
+  width: 100%;
+  max-width: var(--chat-max-width);
 }
 
 .message {
-  margin: 1rem 0;
+  display: flex;
+  gap: 1rem;
   max-width: var(--message-max-width);
+  padding: 1rem;
+  border-radius: var(--radiues-m);
+  background-color: var(--secondary-bg);
 }
 
 .user-message {
-  background-color: var(--secondary-bg);
-  padding: 1rem;
-  border-radius: 20px;
+  align-self: flex-end;
   margin-left: auto;
+  background-color: var(--secondary-bg);
+  flex-direction: row-reverse;
+  border-radius: 20px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .bot-message {
+  align-self: stretch;
+  width: 100%;
+  height: 100%;
   background-color: var(--primary-bg);
-  padding: 1rem;
-  border-radius: 20px;
-  margin-right: auto;
-  display: flex;
-  align-items: flex-start;
-  gap: 1rem;
 }
 
 .bot-pfp {
-  flex-shrink: 0;
+  display: flex;
+  align-items: flex-start;
 }
 
 .bot-logo {
@@ -202,21 +213,34 @@ body {
 
 .message-text {
   flex: 1;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  min-width: 0;
 }
 
 /* Chat Form */
 .chat-form {
-  position: fixed;
-  bottom: 1vh;
-  left: 50%;
-  transform: translateX(-50%);
-  width: calc(100% - 2rem);
+  bottom: 0;
+  width: 75vh;
   max-width: var(--chat-max-width);
   background-color: var(--secondary-bg);
   border-radius: 20px;
   padding: 1rem;
   z-index: 100;
-  margin-left: 20vh;
+}
+
+.chatting-form {
+  position: fixed;
+  bottom: 1vh;
+  width: 90%;
+  max-width: var(--chat-max-width);
+  background-color: var(--secondary-bg);
+  border-radius: 20px;
+  padding: 1rem;
+  border: 10vh;
+  border-width: 10vh;
+  border-color: var(--primary-bg);
+  z-index: 100;
 }
 
 .input-container {
@@ -257,6 +281,9 @@ body {
 .centered-start {
   flex: 1;
   display: flex;
+  position: fixed;
+  left: 50vh;
+  width: 100vh;
   flex-direction: column;
   align-items: center;
   justify-content: center;
