--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -71,18 +71,22 @@ body {
 }
 
 /************* Sidebar ****************/
+.sidebar-container {
+  position: relative;
+  display: flex;
+  height: 100vh;
+  width: var(--sidebar-width);
+  flex: 1;
+}
+
 .sidebar {
+  position: relative;
+  display: flex;
+  flex-direction: column;
   flex: 1;
   max-width: var(--sidebar-width);
-  display: flex;
   background-color: var(--secondary-bg);
-  border-right: 1px solid var(--border-color);
-  height: 100vh;
-  flex-direction: column;
   transition: transform 0.3s ease;
-  position: fixed;
-  left: 0;
-  top: 0;
   z-index: 1000;
 }
 
@@ -91,13 +95,15 @@ body {
 }
 
 .sidebar-controls {
-  position: fixed;
-  top: 1rem;
-  left: 1rem;
+  position: absolute;
   display: flex;
+  flex-direction: row;
+  margin-top: 2rem;
   gap: 0.5rem;
+  transform: translateX(-8rem);
   z-index: 1001; /* Ensure it's above the sidebar */
-  transition: left 0.3s ease;
+  transition: transform 0.3s ease;
+  left: calc(100% + 0.5rem);
 }
 
 .sidebar-toggle,
@@ -121,13 +127,14 @@ body {
 
 /* When sidebar is closed, adjust the controls position */
 .sidebar-closed + .sidebar-controls {
-  left: 1rem;
+  flex-direction: column;
+  transform: translateX(calc(-1 * var(--sidebar-width) - 0.5rem));
 }
 
-/* When sidebar is open, adjust the controls position */
+/* When sidebar is open, adjust the controls position 
 .sidebar-open + .sidebar-controls {
   left: calc(var(--sidebar-width) + 1rem);
-}
+} */
 
 .center {
   flex: 3;
@@ -147,9 +154,9 @@ body {
 .logo-container {
   display: flex;
   align-items: center;
-  justify-content: center;
-  padding: 0.25rem;
-  margin: 1rem 0;
+  justify-content: left;
+  padding: 0.5rem;
+  margin-top: 1rem;
 }
 
 .logo-container > h2 {
